# libnullnexus

./: .clang-format  CMakeLists.txt
example/: CMakeLists.txt  main.cpp
include/libnullnexus/: nullnexus.hpp  websocketclient.hpp
